--- a/package.json
+++ b/package.json
@@ -15,8 +15,24 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "daisyui": "^2.22.0",
     "gatsby": "^4.20.0",
+    "gatsby-plugin-image": "^2.20.0",
+    "gatsby-plugin-sharp": "^4.0.0-next",
+    "gatsby-source-filesystem": "^4.0.0-next",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/eslint-parser": "^7.18.9",
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.8",
+    "babel-eslint": "^10.0.0",
+    "eslint": "^7.5.0",
+    "gatsby-plugin-postcss": "^5.20.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.7.4"
   }
 }
