--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "daisyui": "^2.22.0",
     "gatsby": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
+    "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.0.0-next",
     "gatsby-source-filesystem": "^4.0.0-next",
     "react": "^18.1.0",
