--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public"
+    "deploy": "gh-pages -d public",
+    "prod" : "build && deploy"
   },
   "dependencies": {
     "daisyui": "^2.22.0",
@@ -21,11 +22,11 @@
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.0.0-next",
-    "gatsby-source-filesystem": "^4.0.0-next",
+    "gatsby-source-filesystem": "^4.20.0",
+    "gatsby-transformer-remark": "^5.20.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
-    "webpack": "^5.74.0"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -37,6 +38,7 @@
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0"
   }
 }
