--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "prod": "gatsby build && gh-pages -d public"
   },
   "dependencies": {
-    "babel-eslint": "^10.1.0",
-    "daisyui": "^2.22.0",
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "gatsby": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
@@ -32,6 +31,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.18.9",
     "@tailwindcss/forms": "^0.5.2",
@@ -40,6 +40,7 @@
     "gatsby-plugin-postcss": "^5.20.0",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
+    "daisyui": "^2.22.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0"
