--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "gatsby": "^4.20.0",
     "gatsby-plugin-breadcrumb": "^12.3.1",
+    "gatsby-plugin-google-gtag": "^4.22.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
