--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
+    "theme-change": "^2.2.0",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   }
