--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-plugin-sitemap": "^5.22.0",
+    "gatsby-remark-autolink-headers": "^5.24.0",
     "gatsby-remark-images": "^6.20.0",
     "gatsby-remark-responsive-iframe": "^5.23.0",
     "gatsby-source-filesystem": "^4.20.0",
