--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "dev": "gatsby develop",
+    "refresh": "gatsby clean && gatsby develop",
     "start": "gatsby build && gatsby serve",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -19,12 +20,14 @@
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "gatsby": "^4.20.0",
+    "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-breadcrumb": "^12.3.1",
     "gatsby-plugin-google-gtag": "^4.22.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-plugin-sitemap": "^5.22.0",
+    "gatsby-remark-autolink-headers": "^5.24.0",
     "gatsby-remark-images": "^6.20.0",
     "gatsby-remark-responsive-iframe": "^5.23.0",
     "gatsby-source-filesystem": "^4.20.0",
