--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
