--- a/package.json
+++ b/package.json
@@ -33,15 +33,17 @@
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
     "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.8",
-    "babel-eslint": "^10.1.0",
     "daisyui": "^2.22.0",
     "eslint": "^7.5.0",
     "gatsby-plugin-postcss": "^5.20.0",
