--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "deploy": "gh-pages -d public",
-    "prod": "gatsby build && gh-pages -d public"
+    "prod": "gatsby build && gh-pages -d public",
+    "solve": "npx gatsby-codemods@latest sort-and-aggr-graphql ."
   },
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
-    "gatsby": "^4.20.0",
+    "@parcel/core": "^2.8.3",
+    "gatsby": "^5.4.2",
     "gatsby-awesome-pagination": "^0.3.8",
+    "gatsby-codemods": "^4.4.0",
     "gatsby-plugin-breadcrumb": "^12.3.1",
     "gatsby-plugin-google-gtag": "^4.22.0",
-    "gatsby-plugin-image": "^2.20.0",
+    "gatsby-plugin-image": "^3.4.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-plugin-sitemap": "^5.22.0",
@@ -31,8 +34,9 @@
     "gatsby-remark-images": "^6.20.0",
     "gatsby-remark-responsive-iframe": "^5.23.0",
     "gatsby-source-filesystem": "^4.20.0",
-    "gatsby-transformer-remark": "^5.20.0",
+    "gatsby-transformer-remark": "^6.4.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
