--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "@parcel/core": "^2.8.3",
-    "gatsby": "^5.4.2",
+    "gatsby": "^4.0.0-next||^5.4.2",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-codemods": "^4.4.0",
     "gatsby-plugin-breadcrumb": "^12.3.1",
@@ -54,7 +54,7 @@
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "theme-change": "^2.2.0",
+    "theme-change": "^2.3.0",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   }
