--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myfol",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "description": "myfol",
   "author": "Lord Arba",
@@ -30,6 +30,7 @@
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-plugin-sitemap": "^5.22.0",
+    "gatsby-plugin-use-dark-mode": "^2.0.0",
     "gatsby-remark-autolink-headers": "^5.24.0",
     "gatsby-remark-images": "^6.20.0",
     "gatsby-remark-responsive-iframe": "^5.23.0",
