--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "gatsby": "^4.0.0-next||^5.4.2",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-codemods": "^4.4.0",
+    "gatsby-plugin-advanced-sitemap": "2.1.0",
     "gatsby-plugin-breadcrumb": "^12.3.1",
     "gatsby-plugin-google-gtag": "^4.22.0",
     "gatsby-plugin-image": "^3.4.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
-    "gatsby-plugin-sitemap": "^5.22.0",
     "gatsby-plugin-use-dark-mode": "^2.0.0",
     "gatsby-remark-autolink-headers": "^5.24.0",
     "gatsby-remark-images": "^6.20.0",
