--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-google-gtag": "^4.22.0",
     "gatsby-plugin-image": "^3.4.0",
     "gatsby-plugin-manifest": "^4.20.0",
+    "gatsby-plugin-offline": "^6.5.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-plugin-use-dark-mode": "^2.0.0",
     "gatsby-remark-autolink-headers": "^5.24.0",
