--- a/package.json
+++ b/package.json
@@ -20,43 +20,47 @@
   },
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
-    "@parcel/core": "^2.8.3",
-    "gatsby": "^4.0.0-next||^5.4.2",
+    "@parcel/core": "^2.9.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "gatsby": "^5.12.5",
     "gatsby-awesome-pagination": "^0.3.8",
-    "gatsby-codemods": "^4.4.0",
-    "gatsby-plugin-breadcrumb": "^12.3.1",
+    "gatsby-codemods": "^4.12.0",
+    "gatsby-plugin-breadcrumb": "^12.3.2",
     "gatsby-plugin-google-gtag": "^5.12.0",
-    "gatsby-plugin-image": "^3.4.0",
+    "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
-    "gatsby-plugin-offline": "^6.5.0",
+    "gatsby-plugin-offline": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
-    "gatsby-plugin-use-dark-mode": "^2.0.0",
+    "gatsby-plugin-use-dark-mode": "^2.0.1",
     "gatsby-remark-autolink-headers": "^6.12.0",
     "gatsby-remark-images": "^7.12.0",
     "gatsby-remark-responsive-iframe": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
-    "gatsby-transformer-remark": "^6.4.0",
-    "gatsby-transformer-sharp": "^5.5.0",
-    "graphql": "^16.6.0",
+    "gatsby-transformer-remark": "^6.12.0",
+    "gatsby-transformer-sharp": "^5.12.0",
+    "graphql": "^16.8.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/preset-typescript": "^7.18.6",
-    "@tailwindcss/forms": "^0.5.2",
-    "autoprefixer": "^10.4.8",
+    "@babel/core": "^7.23.0",
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.0",
+    "@tailwindcss/forms": "^0.5.6",
+    "autoprefixer": "^10.4.16",
     "daisyui": "^3.8.2",
     "eslint": "^8.50.0",
     "gatsby-plugin-postcss": "^6.12.0",
     "gh-pages": "^6.0.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "theme-change": "^2.3.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "theme-change": "^2.5.0",
     "typescript": "^5.2.2",
-    "webpack": "^5.74.0"
+    "webpack": "^5.88.2"
   }
 }
