--- a/package.json
+++ b/package.json
@@ -17,18 +17,17 @@
   },
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@parcel/core": "^2.9.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
+    "@sindresorhus/slugify": "^1.1.2",
     "gatsby": "^5.12.5",
     "gatsby-awesome-pagination": "^0.3.8",
-    "gatsby-codemods": "^4.12.0",
     "gatsby-plugin-breadcrumb": "^12.3.2",
     "gatsby-plugin-google-gtag": "^5.12.0",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-mdx": "^5.12.0",
     "gatsby-plugin-offline": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-use-dark-mode": "^2.0.1",
@@ -45,13 +44,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/eslint-parser": "^7.22.15",
-    "@babel/preset-typescript": "^7.23.0",
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.16",
     "daisyui": "^3.8.2",
-    "eslint": "^8.50.0",
     "gatsby-plugin-postcss": "^6.12.0",
     "gh-pages": "^6.0.0",
     "postcss": "^8.4.31",
@@ -59,5 +54,10 @@
     "theme-change": "^2.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2"
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.0.0"
+    }
   }
 }
